# callysto

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.kafkacluster.yml  docker-compose.yml  renovate.json
.cargo/: config  config.toml
.github/workflows/: cicd.yml
book/: .firebaserc  _coverpage.md  index.html  introduction.md  qguide.md  quickstart.md  sidebar.md  sources.md
callysto/: Cargo.toml  README.md  docker-compose.yml
callysto-avro/: Cargo.toml  README.md
callysto-avro/src/: avro.rs  lib.rs
callysto/docker/: Dockerfile  docker-compose.kafkacluster.yml
callysto/docker/docker-elk/: docker-compose.yml
callysto/docs/: Callysto.html  nicepage.css  nicepage.js
callysto/k8s/: redpanda-service.yaml
callysto/src/: app.rs  config.rs  errors.rs  lib.rs
callysto/src/kafka/: cadmin.rs  cconsumer.rs  contexts.rs  cproducer.rs  enums.rs  runtime.rs
callysto/src/runtime/: changelog.rs  recovery.rs  web.rs
callysto/src/sinks/: elasticsearch.rs  postgres.rs
callysto/src/stores/: inmemory.rs  mod.rs  rocksdb.rs  store.rs
callysto/src/types/: agent.rs  collection.rs  context.rs  cronjob.rs  flows.rs  mod.rs  route.rs  service.rs  table.rs  table_agent.rs  timer.rs
docker/: docker-compose.kafkacluster.yml  docker-compose.kafkaguisn.yml  docker-compose.kafkasn.yml
docker/docker-elk/: launch.sh
docker/docker-elk/extensions/curator/: Dockerfile
docs/: Home.css  Home.html  index.html
examples/: Cargo.toml  basic.rs  daemonize.rs  database.rs  double-agent.rs  elastic-sink.rs  inmemory.rs  manual-commit.rs  postgres-sink.rs  producer.py  producer_rocksdb.py  rocksdb.rs  syslim.rs  task.rs  timer.rs  web.rs  webstate.rs
examples/src/: avro-sink.rs  avro-stream-test.avro  avro-stream.rs  basic.rs  custom_service.rs  double-agent.rs  flow.rs  httpserv.rs  inmemory.rs  producer.py  producer_avro.py  producer_elastic.py  producer_postgres.py  search_elastic.py  stateful_service.rs  task.rs  web.rs  webstate.rs
k8s/: redpanda-deployment.yaml
src/: app.rs  confg.rs  config.rs  definitions.rs  enums.rs  errors.rs  kafka.rs  lib.rs  service.rs  table.rs
src/kafka/: cadmin.rs  cconsumer.rs  contexts.rs  ctopic.rs  enums.rs  mod.rs  runtime.rs
src/runtime/: async_con.rs  changelog.rs  mod.rs  recovery.rs  web.rs
src/sensors/: datadog.rs  mod.rs  sensor.rs
src/sinks/: elasticsearch.rs  mod.rs  postgres.rs
src/stores/: inmemory.rs  mod.rs  rocksdb.rs  store.rs  stores.rs
src/types/: agent.rs  collection.rs  context.rs  cronjob.rs  mod.rs  route.rs  service.rs  table.rs  table_agent.rs  task.rs  timer.rs
