[package]
name = "callysto"
version = "0.1.4"
description = "Stream processing framework."
authors = [
    "Theo B. <vertexclique@gmail.com>",
    "Ankur S. <asrivas.cs@gmail.com>",
]
keywords = ["stream", "stream-processing", "microservice", "distributed", "database"]
categories = ["concurrency", "asynchronous", "database", "database-implementations"]
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://vertexclique.github.io/callysto/"
repository = "https://github.com/vertexclique/callysto"
exclude = [
    ".github/*",
    "examples/*",
    "tests/*",
    "art/*",
    "ci/*",
    "k8s/*",
    "benches/*",
    "doc/*",
    "docker/*",
    "docs/*",
    "*.png",
    "*.dot",
    "*.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["epoll", "asyncexec"]
docs = [
    "store-rocksdb",
    "sink-elastic"
]
# IO systems
iouring = ["nuclei/iouring"]
epoll = ["nuclei/epoll"]
# Executor
asyncexec = ["nuclei/async-exec"]
tokio = ["nuclei/tokio"]
tokio03 = ["nuclei/tokio03"]
tokio02 = ["nuclei/tokio02"]
# Storage systems
store-rocksdb = ["rocksdb"]
# Sinks
sink-elastic = [
    "tokio",
    "elasticsearch"
]

[dependencies]
#nuclei = { version = "0.2", default-features = false, features = ["epoll", "async-exec"] }
nuclei = "0.2"
lightproc = "0.3.5"
lever = "0.1.3"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
crossbeam-channel = "0.5"
rdkafka = { version = "0.28.0", default-features = false, features = ["libz"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
libc = "0.2.122"
cuneiform-fields = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
http-types = "2.12"
async-h1 = "2.3"
pin-project-lite = "0.2.8"
futures-lite = "1.12"

# Optionals
rocksdb = { version = "0.18", optional = true }
elasticsearch = { version = "7.14.0-alpha.1", optional = true }

[dev-dependencies]
daemonize = "0.4"
dirs = "4.0.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

