[package]
name = "callysto"
version = "0.1.7"
description = "Stream processing framework."
authors = [
    "Theo B. <vertexclique@gmail.com>",
    "Ankur S. <asrivas.cs@gmail.com>",
]
keywords = [
    "stream",
    "stream-processing",
    "microservice",
    "distributed",
    "database",
]
categories = [
    "concurrency",
    "asynchronous",
    "database",
    "database-implementations",
]
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://vertexclique.github.io/callysto/"
repository = "https://github.com/vertexclique/callysto"
exclude = [
    ".github/*",
    "examples/*",
    "tests/*",
    "art/*",
    "ci/*",
    "k8s/*",
    "benches/*",
    "doc/*",
    "docker/*",
    "docs/*",
    "*.png",
    "*.dot",
    "*.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["epoll", "asyncexec"]
docs = ["store_rocksdb", "sink_elastic", "sink_postgres"]
# IO systems
iouring = ["nuclei/iouring"]
epoll = ["nuclei/epoll"]
# Executor
asyncexec = ["nuclei/async-exec"]
tokio = ["nuclei/tokio"]
tokio03 = ["nuclei/tokio03"]
tokio02 = ["nuclei/tokio02"]
# Storage systems
store_rocksdb = ["rocksdb"]
# Sinks
sink_elastic = ["tokio", "elasticsearch"]
sink_postgres = ["tokio", "deadpool-postgres", "deadpool"]

[dependencies]
#nuclei = { version = "0.2", default-features = false, features = ["epoll", "async-exec"] }
nuclei = "0.2.0"
lightproc = "0.3.5"
lever = "0.1.3"
thiserror = "1.0.30"
async-trait = "0.1.53"
futures = { version = "0.3.21", default-features = false, features = [
    "std",
    "async-await",
] }
futures-timer = "3.0.2"
crossbeam-channel = "0.5.4"
rdkafka = { version = "0.28.0", default-features = false, features = ["libz"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = "2.2.2"
libc = "0.2.124"
cuneiform-fields = "0.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
http-types = "2.12.0"
async-h1 = "2.3.3"
pin-project-lite = "0.2.8"
futures-lite = "1.12.0"

# Optionals
rocksdb = { version = "0.18.0", optional = true }
elasticsearch = { version = "7.14.0-alpha.1", optional = true }
deadpool-postgres = { version = "0.10.2", features = [
    "serde",
], optional = true }
deadpool = { version = "0.9.3", optional = true }
async-global-executor = "2.0.4"
[dev-dependencies]
daemonize = "0.4.1"
dirs = "4.0.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
