[package]
name = "callysto-avro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16"
futures-lite = "2.1.0"
pin-project-lite = "0.2.13"
serde = "1.0"
callysto = { version = "0.1", path = "../callysto" }
