[package]
name = "callysto-avro"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16"
futures-lite = "2.1"
pin-project-lite = "0.2"
cuneiform-fields = "0.1.1"
crossbeam-channel = "0.5"
serde = "1.0"
tracing = "0.1"
callysto = { version = "0.1", path = "../callysto" }
