[package]
name = "callysto"
version = "0.1.11"
description = "Stream processing framework."
authors = [
    "Theo B. <vertexclique@gmail.com>",
    "Ankur S. <asrivas.cs@gmail.com>",
]
keywords = [
    "stream",
    "stream-processing",
    "microservice",
    "distributed",
    "database",
]
categories = [
    "concurrency",
    "asynchronous",
    "database",
    "database-implementations",
]
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://vertexclique.github.io/callysto/"
repository = "https://github.com/vertexclique/callysto"
exclude = [
    ".github/*",
    "examples/*",
    "tests/*",
    "art/*",
    "ci/*",
    "k8s/*",
    "benches/*",
    "doc/*",
    "docker/*",
    "docs/*",
    "*.png",
    "*.dot",
    "*.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["onthefly", "iouring", "asyncexec"]
docs = ["store_rocksdb", "sink_elastic", "sink_postgres"]
# On The Fly service management (add/remove/update services, agents, tables).
onthefly = []
# IO systems
iouring = ["nuclei/iouring"]
epoll = ["nuclei/epoll"]
# Executor
asyncexec = ["nuclei/async-exec"]
tokio = ["nuclei/tokio"]
# Storage systems
store_rocksdb = ["rocksdb"]
# Sinks
sink_elastic = ["tokio", "elasticsearch"]
sink_postgres = ["tokio", "deadpool-postgres", "deadpool"]

[dependencies]
nuclei = "0.4"
lever = "0.1.4"
thiserror = "1.0"
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-timer = "3.0"
crossbeam-channel = "0.5"
rdkafka = { version = "0.36.2", default-features = false, features = ["libz"] }
tracing = "0.1"
url = "2.5"
libc = "0.2"
cuneiform-fields = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "1.3.3"
http-types = "2.12.0"
async-h1 = "2.3"
pin-project-lite = "0.2"
futures-lite = "2.2"

# Optionals
rocksdb = { version = "0.22.0", optional = true }
elasticsearch = { version = "7.14.0-alpha.1", optional = true }
deadpool-postgres = { version = "0.12", features = [
    "serde",
], optional = true }
deadpool = { version = "0.10", optional = true }

[dev-dependencies]
dirs = "4.0.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
